# libstoragemgmt

./: .clang-format  .disable.packit.yaml  .gitattributes  .gitignore  .packit.yaml  .travis.yml  AUTHORS  COPYING.LIB  INSTALL  Makefile  Makefile.am  NEWS  README  autogen.sh  configure.ac  deb_dependency  libstoragemgmt.pc.in  libstoragemgmt.spec  libstoragemgmt.spec.in  rh_py2_rpm_dependency  rh_py3_rpm_dependency  rh_rpm_dependency  suse_rpm_dependency
c_binding/: .clang-format  Makefile.am  hash_table.h  hash_table_glib.c  hash_table_uthash.c  jsmn.h  json.hpp  libata.c  libata.h  libfc.c  libfc.h  libiscsi.c  libiscsi.h  libnvme.c  libnvme.h  libsas.c  libsas.h  libses.c  libses.h  libsg.c  libsg.h  lsm_convert.cpp  lsm_convert.hpp  lsm_datatypes.cpp  lsm_datatypes.hpp  lsm_ipc.cpp  lsm_ipc.hpp  lsm_local_disk.c  lsm_local_disk.cpp  lsm_mgmt.cpp  lsm_plugin_ipc.cpp  lsm_plugin_ipc.hpp  lsm_scsi.c  lsm_value_jsmn.hpp  lsm_value_nlohmann_json.hpp  lsm_value_yajl.hpp  ptr_array.h  ptr_array_glib.c  ptr_array_utlist.c  test.cpp  (+3 more)
c_binding/include/: Makefile.am
c_binding/util/: misc.cpp  misc.h  qparams.c  qparams.h
config/: Makefile.am  lsmd.conf
config/pluginconf.d/: ses.conf  sim.conf
daemon/: Makefile.am  lsm_daemon.c  lsm_rest.c  lsm_rest.h
doc/: Makefile.am  REST_API_Doc  doc-preclean.pl  doxygen.conf  doxygen.conf.in  kernel-doc  lsmcli.bash  split-man.pl
doc/man/: Makefile.am  arcconf_lsmplugin.1.in  hpsa_lsmplugin.1.in  libstoragemgmt.h.3.in  local_lsmplugin.1.in  lsmcli.1  lsmcli.1.in  lsmd.1  lsmd.1.in  lsmd.conf.5.in  megaraid_lsmplugin.1.in  nfs_lsmplugin.1.in  nstor_lsmplugin.1.in  ontap_lsmplugin.1.in  sim_lsmplugin.1.in  simc_lsmplugin.1.in  smispy_lsmplugin.1.in  targetd_lsmplugin.1.in
include/libstoragemgmt/: Makefile.am  libstoragemgmt.h  libstoragemgmt_accessgroups.h  libstoragemgmt_blockrange.h  libstoragemgmt_capabilities.h  libstoragemgmt_common.h  libstoragemgmt_disk.h  libstoragemgmt_error.h  libstoragemgmt_fs.h  libstoragemgmt_initiators.h  libstoragemgmt_nfsexport.h  libstoragemgmt_optionaldata.h  libstoragemgmt_plug_interface.h  libstoragemgmt_plugin.h  libstoragemgmt_pool.h  libstoragemgmt_snapshot.h  libstoragemgmt_systems.h  libstoragemgmt_types.h  libstoragemgmt_version.h.in  libstoragemgmt_volumes.h
lsm/: Makefile.am  lio_lsmplugin  lsmd  nstor_lsmplugin  ontap_lsmplugin  sim.lsmplugin  sim_lsmplugin  smispy_lsmplugin  targetd_lsmplugin  v7k_lsmplugin
lsm/lsm/: __init__.py  _client.py  _cmdline.py  _common.py  _data.py  _iplugin.py  client.py  cmdline.py  common.py  data.py  eseries.py  ibmv7k.py  iplugin.py  lsmcli_data_display.py  na.py  nstor.py  ontap.py  pluginrunner.py  simarray.py  simulator.py  smis.py  smisproxy.py  targetd.py  transport.py  version.py.in
plugin/: Makefile  Makefile.am  lsm_plugin_smis.cpp  simc_lsmplugin.c  smis.cpp  smis.h
plugin/arcconf/: Makefile.am  __init__.py  arcconf.py  arcconf_lsmplugin  arcconf_lsmplugin.in
plugin/arcconf_plugin/: Makefile.am  __init__.py  arcconf.py  arcconf_lsmplugin.in  utils.py
plugin/hpsa/: Makefile.am  __init__.py  hpsa.py  hpsa_lsmplugin  hpsa_lsmplugin.in  utils.py
plugin/hpsa_plugin/: Makefile.am  __init__.py  hpsa.py  hpsa_lsmplugin.in  utils.py
plugin/local/: Makefile.am  local.py  local_lsmplugin.in
plugin/local_plugin/: Makefile.am  __init__.py  local.py  local_lsmplugin.in
plugin/megaraid/: Makefile.am  __init__.py  megaraid.py  megaraid_lsmplugin  megaraid_lsmplugin.in  utils.py
plugin/megaraid_plugin/: Makefile.am  __init__.py  megaraid.py  megaraid_lsmplugin.in  utils.py
plugin/nfs/: Makefile.am  nfs.py  nfs_clib.c  nfs_lsmplugin.c  nfs_lsmplugin.in
plugin/nfs_plugin/: Makefile.am  __init__.py  nfs.py  nfs_clib.c  nfs_lsmplugin.in
plugin/nstor/: Makefile.am  nstor.py  nstor_lsmplugin  nstor_lsmplugin.in
plugin/ontap/: Makefile.am  na.py  ontap.py  ontap_lsmplugin  ontap_lsmplugin.in
plugin/ses/: Makefile.am  libses.c  libses.h  libudev_storage.c  libudev_storage.h  my_mem.c  my_mem.h  ptr_list.c  ptr_list.h  ses_lsmplugin.c
plugin/sim/: Makefile.am  sim_lsmplugin  sim_lsmplugin.in  simarray.py  simulator.py
plugin/sim_plugin/: Makefile.am  __init__.py  sim_lsmplugin.in  simarray.py  simulator.py
plugin/simc/: Makefile.am  db.c  db.h  db_table_init.h  fs_ops.c  fs_ops.h  mgm_ops.c  mgm_ops.h  nfs_ops.c  nfs_ops.h  ops_v1_2.c  ops_v1_2.h  ops_v1_3.c  ops_v1_3.h  san_ops.c  san_ops.h  simc_lsmplugin.c  utils.c  utils.h  vector.c  vector.h
plugin/smispy/: Makefile.am  WBEM.py  dmtf.py  eseries.py  lmiwbem_wrap.py  smis.py  smis_ag.py  smis_cap.py  smis_common.py  smis_constants.py  smis_disk.py  smis_pool.py  smis_sys.py  smis_vol.py  smisproxy.py  smispy_lsmplugin  smispy_lsmplugin.in  utils.py
plugin/smispy_plugin/: Makefile.am  __init__.py  dmtf.py  smis.py  smis_ag.py  smis_cap.py  smis_common.py  smis_disk.py  smis_pool.py  smis_sys.py  smis_vol.py  smispy_lsmplugin.in  utils.py
plugin/targetd/: Makefile.am  targetd.py  targetd_lsmplugin  targetd_lsmplugin.in
plugin/targetd_plugin/: Makefile.am  __init__.py  targetd.py  targetd_lsmplugin.in
plugin/util/: misc.cpp  misc.h  qparams.c  qparams.h
plugin/v7k/: ibmv7k.py  v7k_lsmplugin
python_binding/: Makefile.am
python_binding/lsm/: __init__.py  _clib.c  _client.py  _cmdline.py  _common.py  _data.py  _iplugin.py  _local_disk.py  _pluginrunner.py  _scsi.c  _scsi.py  _scsi_clib.c  _transport.py  version.py.in
src/: Makefile  Makefile.am  lsm_convert.cpp  lsm_convert.hpp  lsm_daemon.c  lsm_datatypes.c  lsm_datatypes.cpp  lsm_datatypes.h  lsm_datatypes.hpp  lsm_ipc.cpp  lsm_ipc.hpp  lsm_mgmt.c  lsm_mgmt.cpp  lsm_plugin_ipc.cpp  lsm_plugin_ipc.hpp  lsm_rest.c  lsm_rest.h  test.cpp
src/util/: misc.cpp  qparams.h
test/: Makefile  Makefile.am  cmdtest.py  cmdtest.py.in  devel_env.sh  docker_ci_test.sh  docker_travis_test.sh  integration.sh  plugin_test.py  plugin_test.py.in  runtests.sh  runtests.sh.in  string_list_hash_test.c  string_list_hash_test.h  test_include.sh  tester  tester.c  trusted.yaml
test/webtest/: test.css  test_automated.py  test_hardware.py  (+1 more)
(+110 files in other folders)
